--- a/cocktail/src/index.css
+++ b/cocktail/src/index.css
@@ -68,7 +68,7 @@ body {
         @apply fixed z-50 w-full;
 
         div {
-            @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-0 px-5 container mx-auto;
+            @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-4 px-5 container mx-auto;
         }
 
         p {
@@ -104,7 +104,7 @@ body {
         }
 
         .body {
-            @apply container mx-auto absolute left-1/2 -translate-x-1/2 lg:bottom-20 top-auto md:top-[30vh] flex justify-between items-end px-5;
+            @apply container mx-auto absolute left-1/2 -translate-x-1/2 lg:bottom-20 top-auto md:top-[30vh] flex justify-between items-end px-8;
 
             .content {
                 @apply flex lg:flex-row flex-col w-full gap-10 justify-between items-center lg:items-end mx-auto;
@@ -151,11 +151,11 @@ body {
             @apply container mx-auto relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 2xl:px-0 px-5;
 
             .popular {
-                @apply space-y-8 w-full md:w-fit;
+                @apply space-y-8 w-full md:w-fit px-8 ;
             }
 
             .loved {
-                @apply space-y-8 w-full md:w-fit pb-20 md:pb-0;
+                @apply space-y-8 w-full md:w-fit pb-20 md:pb-0 px-8;
             }
 
             h2 {
@@ -188,7 +188,7 @@ body {
         @apply min-h-screen py-28 2xl:px-0 px-5 container mx-auto;
 
         .content {
-            @apply grid grid-cols-1 lg:grid-cols-12 gap-5;
+            @apply grid grid-cols-1 lg:grid-cols-12 gap-5 px-8;
 
             h2 {
                 @apply text-5xl md:text-6xl font-modern-negra max-w-lg;
@@ -248,7 +248,7 @@ body {
         }
 
         .content {
-            @apply flex md:flex-row flex-col justify-between md:mb-16 md:mt-0 mt-40 gap-10;
+            @apply flex md:flex-row flex-col justify-between md:mb-16 md:mt-0 mt-40 gap-10 px-10 mx-8;
         }
 
         .cocktail-img {
